add video, update readme and delete comments

--- a/application/templates/puzzle_list.html
+++ b/application/templates/puzzle_list.html
@@ -11,13 +11,13 @@
     <style>
 
         #searchInput {
-            top: 360px; /* Adjust the top position as per your requirement */
-            left: 1000px; /* Adjust the left position as per your requirement */
+            top: 360px; 
+            left: 1000px; 
     
             background-image: url('../static/searchbar/searchbar_total1.PNG');
-            background-size: cover; /* Adjust the size as needed */
+            background-size: cover; 
             background-repeat: no-repeat;
-            background-position: center; /* Adjust position of the image */
+            background-position: center;
             padding-left: 25px;
             padding-right: 35px; /* Leave space for the search icon */
             border: 1px solid #ccc; /* Add border for better appearance */
